# FaceNet

./: README.md  pyproject.toml
facenet/: __init__.py  callbacks.py  config.py  dataset.py  detection.py  facenet.py  facerecognizer.py  h5utils.py  ioutils.py  logging.py  statistics.py
facenet/apps/: detect_faces.py  evaluate_embeddings.py  train_classifier.py  train_recognizer.py
facenet/apps/configs/: config.yaml  detect_faces.yaml  evaluate_embeddings.yaml  train_classifier.yaml  train_recognizer.yaml
facenet/detectors/: face_detector.py
facenet/models/: inception_resnet_v1.py
models/default/logs/: train_softmax.yaml
