[tool.poetry]
name = "facenet"
version = "0.1.0"
description = ""
authors = ["korus <ruslan.kosarev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
