[tool.poetry]
name = "facenet"
version = "0.1.0"
description = ""
authors = ["korus <ruslan.kosarev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"
click = "^8.0.1"
loguru = "^0.5.3"
tqdm = "^4.61.2"
Pillow = "^8.3.0"
omegaconf = "^2.1.0"
scikit-learn = "^0.24.2"
pandas = "^1.3.0"
mtcnn = "^0.1.1"
tables = "^3.6.1"
mtcnn-opencv = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
